--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -5,6 +5,7 @@
                 android:layout_height="70dp">
 
     <android.support.v7.widget.CardView
+
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,8 +18,7 @@
 
             <TextView
                     android:id="@+id/title"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
+                    style="@style/NoteTitleFont"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"
                     tools:text="test_title"/>
 
