--- a/app/src/main/res/menu/activity_note_detail.xml
+++ b/app/src/main/res/menu/activity_note_detail.xml
@@ -4,8 +4,12 @@
     >
 
     <item android:id="@+id/action_save"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/baseline_save_black_x2_18dp"
-        android:title="Enregistrer"/>
+        android:title="@string/enregistrer"/>
+    <item android:id="@+id/action_delete"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/baseline_delete_black_24dp_x2"
+        android:title="@string/supprimer"/>
 
 </menu>
