--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.1"
-        android:weightSum="2"
+        android:weightSum="3"
         style="?android:attr/buttonBarStyle">
 
         <Button
@@ -49,7 +49,10 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="@drawable/baseline_record_voice_over_black_24dp"
-            android:layout_margin="40dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
         <Button
             android:id="@+id/button_user_vocal"
             style="?android:attr/buttonBarButtonStyle"
@@ -58,7 +61,10 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="@drawable/baseline_settings_voice_black_24dp"
-            android:layout_margin="40dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
 
         <Button
             android:id="@+id/button_share"
@@ -68,7 +74,10 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="@drawable/baseline_share_black_24dp"
-            android:layout_margin="40dp"/>
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
     </LinearLayout>
 
 </LinearLayout>
